<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:alignmentMode="alignBounds"
                android:padding="@dimen/default_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:id="@+id/show_details_name_ll"
        >

        <TextView
            android:text="@string/show_details_name_title"
            style="@style/show_details_title"
            />

        <TextView
            android:id="@+id/show_details_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_details_name_ll"
        android:id="@+id/show_details_description_ll">

        <TextView
            android:text="@string/show_details_description_title"
            style="@style/show_details_title"
            />

        <TextView
            android:id="@+id/show_details_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_details_description_ll"
        android:id="@+id/show_details_picture_ll">

        <TextView
            android:text="@string/show_details_picture_title"
            style="@style/show_details_title"
            />

        <ImageView
            android:layout_height="300dp"
            android:id="@+id/show_details_picture"
            android:layout_width="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_details_picture_ll"
        android:id="@+id/show_details_rating_ll">

        <TextView
            android:text="@string/show_details_rating_title"
            style="@style/show_details_title"
            />

        <RatingBar
            android:id="@+id/show_details_rating"
            android:numStars="5"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</RelativeLayout>
